k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rewayaat-v2
  namespace: rewayaat-v2
  labels:
    app: rewayaat-v2
spec:
  type: ClusterIP
  selector:
    app: rewayaat-v2
  ports:
    - name: http
      port: 80
      targetPort: 8002
    - name: management
      port: 8003
      targetPort: 8003
